--- a/angularIntro/src/app/header/header.component.html
+++ b/angularIntro/src/app/header/header.component.html
@@ -1,9 +1,12 @@
 <div>
   <nav >
     <a routerLink="home">Home</a>
+    <a routerLink="form">form</a>
+    <a routerLink="user">User</a>
     <a routerLink="about">About</a>
     <a routerLink="fecture">Feacture</a>
     <a routerLink="gall">Gallery</a>
     <a routerLink="contact">Contact</a>
+    <a routerLink="firstModule">FirstModule</a>
   </nav>
 </div>
