--- a/angular_task/src/app/form/form.component.html
+++ b/angular_task/src/app/form/form.component.html
@@ -2,7 +2,7 @@
   <div class="card mt-5">
     <div class="card-body">
       <form action="" name="form" #form="ngForm" (ngSubmit)="form.valid && afterSubmit()">
-        <h2 class="d-flex justify-content-center"><b><u>Registration form</u></b></h2>
+        <h2 class="d-flex justify-content-center"><b><u>Template driven form Validation</u></b></h2>
           <div class="form-row mt-5 text-align-left">
             <div class="form-group col-md-6">
               <label for="inputname">Full Name</label>
