--- a/angular_task/src/app/header/header.component.html
+++ b/angular_task/src/app/header/header.component.html
@@ -6,11 +6,8 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="form">Form <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="bank">BankingApp</a>
+        <a class="nav-link" routerLink="home">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="eligible">EligibilityCheck</a>
@@ -18,6 +15,30 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="emi">EMI Cali</a>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Forms
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" [routerLink]="['form']" >Template Driven Form</a>
+          <a class="dropdown-item" [routerLink]="['ractive']" >Reactive Form</a>
+
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="bank">BankingApp</a>
+      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link" routerLink="login">login</a>
+      </li> -->
+      <!-- <li class="nav-item">
+        <a class="nav-link" routerLink="calci">calci</a>
+      </li> -->
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="second">Emp/Prod</a>
+      </li>
+
 
     </ul>
 
